// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> default matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0.k-Button--hydrogen {
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--hydrogen svg:not(.k-ColorSvg),
.c0.k-Button--hydrogen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--hydrogen:hover,
.c0.k-Button--hydrogen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--hydrogen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--hydrogen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--helium {
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--helium svg:not(.k-ColorSvg),
.c0.k-Button--helium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--helium:hover,
.c0.k-Button--helium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--helium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--helium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--lithium {
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--lithium svg:not(.k-ColorSvg),
.c0.k-Button--lithium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--lithium:hover,
.c0.k-Button--lithium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--lithium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--lithium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--beryllium {
  border: 0.125rem solid #222;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--beryllium svg:not(.k-ColorSvg),
.c0.k-Button--beryllium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--beryllium:hover,
.c0.k-Button--beryllium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--beryllium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--beryllium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--carbon {
  border: 0.125rem solid #fff;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--carbon svg:not(.k-ColorSvg),
.c0.k-Button--carbon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--carbon:hover,
.c0.k-Button--carbon:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--carbon:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--carbon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--oxygen {
  border: 0.125rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--oxygen svg:not(.k-ColorSvg),
.c0.k-Button--oxygen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--oxygen:hover,
.c0.k-Button--oxygen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--oxygen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--oxygen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--copper {
  border: 0.125rem solid #ffb2c7;
  background-color: #fff;
  color: #ff0046;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--copper svg:not(.k-ColorSvg),
.c0.k-Button--copper svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--copper:hover,
.c0.k-Button--copper:focus {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c0.k-Button--copper:active {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c0.k-Button--copper:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--boron {
  border: 0.125rem solid #636363;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--boron svg:not(.k-ColorSvg),
.c0.k-Button--boron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--boron:hover,
.c0.k-Button--boron:focus {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #fff;
}

.c0.k-Button--boron:active {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #b8b8b8;
}

.c0.k-Button--boron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--neon {
  border: 0.125rem solid #ff7800;
  background-color: #ff7800;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--neon svg:not(.k-ColorSvg),
.c0.k-Button--neon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--neon:hover,
.c0.k-Button--neon:focus {
  border-color: #f57905;
  background-color: #f57905;
  color: #fff;
}

.c0.k-Button--neon:active {
  border-color: #eb6e00;
  background-color: #eb6e00;
  color: #fff;
}

.c0.k-Button--neon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--iron {
  border: 0.125rem solid #ff0046;
  background-color: #ff0046;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--iron svg:not(.k-ColorSvg),
.c0.k-Button--iron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--iron:hover,
.c0.k-Button--iron:focus {
  border-color: #d8043e;
  background-color: #d8043e;
  color: #fff;
}

.c0.k-Button--iron:active {
  border-color: #a8002e;
  background-color: #a8002e;
  color: #fff;
}

.c0.k-Button--iron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_facebook {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_facebook svg:not(.k-ColorSvg),
.c0.k-Button--social_facebook svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_facebook:hover,
.c0.k-Button--social_facebook:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0.k-Button--social_facebook:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0.k-Button--social_facebook:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_twitter {
  border: 0.125rem solid #55acee;
  background-color: #55acee;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_twitter svg:not(.k-ColorSvg),
.c0.k-Button--social_twitter svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_twitter:hover,
.c0.k-Button--social_twitter:focus {
  border-color: #469ddf;
  background-color: #469ddf;
  color: #fff;
}

.c0.k-Button--social_twitter:active {
  border-color: #388ed0;
  background-color: #388ed0;
  color: #fff;
}

.c0.k-Button--social_twitter:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_linkedin {
  border: 0.125rem solid #00669e;
  background-color: #00669e;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_linkedin svg:not(.k-ColorSvg),
.c0.k-Button--social_linkedin svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_linkedin:hover,
.c0.k-Button--social_linkedin:focus {
  border-color: #00578f;
  background-color: #00578f;
  color: #fff;
}

.c0.k-Button--social_linkedin:active {
  border-color: #004880;
  background-color: #004880;
  color: #fff;
}

.c0.k-Button--social_linkedin:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_instagram {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  -webkit-transition: background 0.2s,color 0.2s;
  transition: background 0.2s,color 0.2s;
  border: 0 !important;
  background-repeat: no-repeat;
  background-image: radial-gradient( farthest-side at 32% 100%,#ffe17d 0%,#ffcd69 10%,#fa9137 28%,#eb4141 42%,transparent 82% ),linear-gradient(135deg,#234bd7 12%,#c33cbe 58%);
  background-size: 160% 100%;
  background-position: center;
}

.c0.k-Button--social_instagram svg:not(.k-ColorSvg),
.c0.k-Button--social_instagram svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_instagram:hover,
.c0.k-Button--social_instagram:focus {
  background-image: radial-gradient( farthest-side at 32% 100%,#f0d26e 0%,#f0be5a 10%,#eb8228 28%,#dc3232 42%,transparent 82% ),linear-gradient(135deg,#143cc8 12%,#b42daf 58%);
}

.c0.k-Button--social_instagram:active {
  background-image: radial-gradient( farthest-side at 32% 100%,#e1c35f 0%,#e1af4b 10%,#dc7319 28%,#cd2323 42%,transparent 82% ),linear-gradient(135deg,#052db9 12%,#a51ea0 58%);
}

.c0.k-Button--social_instagram:hover,
.c0.k-Button--social_instagram:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0.k-Button--social_instagram:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0.k-Button--social_instagram:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_youtube {
  border: 0.125rem solid #ff0000;
  background-color: #ff0000;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_youtube svg:not(.k-ColorSvg),
.c0.k-Button--social_youtube svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_youtube:hover,
.c0.k-Button--social_youtube:focus {
  border-color: #f00000;
  background-color: #f00000;
  color: #fff;
}

.c0.k-Button--social_youtube:active {
  border-color: #e10000;
  background-color: #e10000;
  color: #fff;
}

.c0.k-Button--social_youtube:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_pinterest {
  border: 0.125rem solid #bd081c;
  background-color: #bd081c;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_pinterest svg:not(.k-ColorSvg),
.c0.k-Button--social_pinterest svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_pinterest:hover,
.c0.k-Button--social_pinterest:focus {
  border-color: #ae000d;
  background-color: #ae000d;
  color: #fff;
}

.c0.k-Button--social_pinterest:active {
  border-color: #9f0000;
  background-color: #9f0000;
  color: #fff;
}

.c0.k-Button--social_pinterest:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-label="Close"
  className="c0 k-Button k-Button--regular k-Button--hydrogen k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-icon"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="#222"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> with props matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0.k-Button--hydrogen {
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--hydrogen svg:not(.k-ColorSvg),
.c0.k-Button--hydrogen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--hydrogen:hover,
.c0.k-Button--hydrogen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--hydrogen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--hydrogen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--helium {
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--helium svg:not(.k-ColorSvg),
.c0.k-Button--helium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--helium:hover,
.c0.k-Button--helium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--helium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--helium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--lithium {
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--lithium svg:not(.k-ColorSvg),
.c0.k-Button--lithium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--lithium:hover,
.c0.k-Button--lithium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--lithium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--lithium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--beryllium {
  border: 0.125rem solid #222;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--beryllium svg:not(.k-ColorSvg),
.c0.k-Button--beryllium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--beryllium:hover,
.c0.k-Button--beryllium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--beryllium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--beryllium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--carbon {
  border: 0.125rem solid #fff;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--carbon svg:not(.k-ColorSvg),
.c0.k-Button--carbon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--carbon:hover,
.c0.k-Button--carbon:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--carbon:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--carbon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--oxygen {
  border: 0.125rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--oxygen svg:not(.k-ColorSvg),
.c0.k-Button--oxygen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--oxygen:hover,
.c0.k-Button--oxygen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0.k-Button--oxygen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0.k-Button--oxygen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--copper {
  border: 0.125rem solid #ffb2c7;
  background-color: #fff;
  color: #ff0046;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--copper svg:not(.k-ColorSvg),
.c0.k-Button--copper svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--copper:hover,
.c0.k-Button--copper:focus {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c0.k-Button--copper:active {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c0.k-Button--copper:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--boron {
  border: 0.125rem solid #636363;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--boron svg:not(.k-ColorSvg),
.c0.k-Button--boron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--boron:hover,
.c0.k-Button--boron:focus {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #fff;
}

.c0.k-Button--boron:active {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #b8b8b8;
}

.c0.k-Button--boron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--neon {
  border: 0.125rem solid #ff7800;
  background-color: #ff7800;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--neon svg:not(.k-ColorSvg),
.c0.k-Button--neon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--neon:hover,
.c0.k-Button--neon:focus {
  border-color: #f57905;
  background-color: #f57905;
  color: #fff;
}

.c0.k-Button--neon:active {
  border-color: #eb6e00;
  background-color: #eb6e00;
  color: #fff;
}

.c0.k-Button--neon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--iron {
  border: 0.125rem solid #ff0046;
  background-color: #ff0046;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--iron svg:not(.k-ColorSvg),
.c0.k-Button--iron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--iron:hover,
.c0.k-Button--iron:focus {
  border-color: #d8043e;
  background-color: #d8043e;
  color: #fff;
}

.c0.k-Button--iron:active {
  border-color: #a8002e;
  background-color: #a8002e;
  color: #fff;
}

.c0.k-Button--iron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_facebook {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_facebook svg:not(.k-ColorSvg),
.c0.k-Button--social_facebook svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_facebook:hover,
.c0.k-Button--social_facebook:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0.k-Button--social_facebook:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0.k-Button--social_facebook:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_twitter {
  border: 0.125rem solid #55acee;
  background-color: #55acee;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_twitter svg:not(.k-ColorSvg),
.c0.k-Button--social_twitter svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_twitter:hover,
.c0.k-Button--social_twitter:focus {
  border-color: #469ddf;
  background-color: #469ddf;
  color: #fff;
}

.c0.k-Button--social_twitter:active {
  border-color: #388ed0;
  background-color: #388ed0;
  color: #fff;
}

.c0.k-Button--social_twitter:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_linkedin {
  border: 0.125rem solid #00669e;
  background-color: #00669e;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_linkedin svg:not(.k-ColorSvg),
.c0.k-Button--social_linkedin svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_linkedin:hover,
.c0.k-Button--social_linkedin:focus {
  border-color: #00578f;
  background-color: #00578f;
  color: #fff;
}

.c0.k-Button--social_linkedin:active {
  border-color: #004880;
  background-color: #004880;
  color: #fff;
}

.c0.k-Button--social_linkedin:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_instagram {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  -webkit-transition: background 0.2s,color 0.2s;
  transition: background 0.2s,color 0.2s;
  border: 0 !important;
  background-repeat: no-repeat;
  background-image: radial-gradient( farthest-side at 32% 100%,#ffe17d 0%,#ffcd69 10%,#fa9137 28%,#eb4141 42%,transparent 82% ),linear-gradient(135deg,#234bd7 12%,#c33cbe 58%);
  background-size: 160% 100%;
  background-position: center;
}

.c0.k-Button--social_instagram svg:not(.k-ColorSvg),
.c0.k-Button--social_instagram svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_instagram:hover,
.c0.k-Button--social_instagram:focus {
  background-image: radial-gradient( farthest-side at 32% 100%,#f0d26e 0%,#f0be5a 10%,#eb8228 28%,#dc3232 42%,transparent 82% ),linear-gradient(135deg,#143cc8 12%,#b42daf 58%);
}

.c0.k-Button--social_instagram:active {
  background-image: radial-gradient( farthest-side at 32% 100%,#e1c35f 0%,#e1af4b 10%,#dc7319 28%,#cd2323 42%,transparent 82% ),linear-gradient(135deg,#052db9 12%,#a51ea0 58%);
}

.c0.k-Button--social_instagram:hover,
.c0.k-Button--social_instagram:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0.k-Button--social_instagram:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0.k-Button--social_instagram:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_youtube {
  border: 0.125rem solid #ff0000;
  background-color: #ff0000;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_youtube svg:not(.k-ColorSvg),
.c0.k-Button--social_youtube svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_youtube:hover,
.c0.k-Button--social_youtube:focus {
  border-color: #f00000;
  background-color: #f00000;
  color: #fff;
}

.c0.k-Button--social_youtube:active {
  border-color: #e10000;
  background-color: #e10000;
  color: #fff;
}

.c0.k-Button--social_youtube:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0.k-Button--social_pinterest {
  border: 0.125rem solid #bd081c;
  background-color: #bd081c;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0.k-Button--social_pinterest svg:not(.k-ColorSvg),
.c0.k-Button--social_pinterest svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0.k-Button--social_pinterest:hover,
.c0.k-Button--social_pinterest:focus {
  border-color: #ae000d;
  background-color: #ae000d;
  color: #fff;
}

.c0.k-Button--social_pinterest:active {
  border-color: #9f0000;
  background-color: #9f0000;
  color: #fff;
}

.c0.k-Button--social_pinterest:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-label="close"
  className="c0 k-Button k-Button--tiny k-Button--hydrogen k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-icon"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="#222"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;
